--- a/my_app/package.json
+++ b/my_app/package.json
@@ -10,11 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.16.0",
     "express": "^4.18.2",
-    "pg": "^8.10.0"
+    "express-sharp": "^4.2.41",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.10.0",
+    "prisma": "^4.16.0"
   },
   "devDependencies": {
     "ejs-cli": "^2.2.3",
+    "kill-port": "^2.0.1",
     "nodemon": "^2.0.22"
-  }
+  },
+  "delay": "2500"
 }
